namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-bentham-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-bentham-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "prisons-data-science"
    cloud-platform.justice.gov.uk/application: "Seized Media Database"
    cloud-platform.justice.gov.uk/owner: "prison intelligence data science: intel_app_support@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/bentham-app"
    cloud-platform.justice.gov.uk/team-name: "bentham-app-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
